--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch-js": "watchify build\\js\\hello.js -o public\\js\\bundle.js -dv",
     "build-sass": "bundle exec compass compile --time",
     "watch-sass": "bundle exec compass watch --time",
-    "watch": "npm run watch-js & npm run watch-css",
+    "watch": "start \"watch-js\" npm run watch-js & start \"watch-css\" npm run watch-css",
     "test": "echo 1"
   }
 }
